Alignment fix.

--- a/src/css/index.less
+++ b/src/css/index.less
@@ -787,6 +787,13 @@ body {
     //     outline: none;
     // }
 
+
+	.reward-animation {
+		 h2 {
+			margin-left: 0;
+			font-weight: 600;
+		}
+	}
 	.product-col {
 
 	 img {
